달팽이, 꽃게, 물고기 2종 터치음, 동적인 배경화면 요소 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.example.user.ocean_stroy"
+        applicationId "com.example.user.ocean_story"
         minSdkVersion 10
         targetSdkVersion 25
         versionCode 1
