--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.user.ocean_story.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.user.ocean_story.GameActivity"/>
+        <activity android:name=".GameActivity" />
+        <activity android:name=".Menu_Sliding_Panel"
+            android:theme="@android:style/Theme.Dialog"></activity>
     </application>
 
 </manifest>
